<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#990000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Talk2Trojans"
            android:textColor="@color/white"
            android:textSize="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="42dp" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="66dp"
            android:layout_height="59dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/email_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email" />

                <EditText
                    android:id="@+id/email_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/password_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password" />

                <EditText
                    android:id="@+id/password_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/confirm_password_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirm Password" />

                <EditText
                    android:id="@+id/confirm_password_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/first_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="First Name" />

                <EditText
                    android:id="@+id/first_name_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/last_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Last Name" />

                <EditText
                    android:id="@+id/last_name_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/reg_code_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Registration Code" />

                <EditText
                    android:id="@+id/reg_code_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/speaker_status_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Speaker Status" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Native" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="International" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#990000"
                android:text="Register"
                android:layout_marginVertical="5dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>